NLP TP's/texts/robotics/robotics.stackexchange_0000092681.txt
Q:

How to fix error in building the lidar_localizer package?

Greetings,
I am unsure how to resolve the error in building autoware and i have been following the instructions on this site.
system specs:
Ubuntu 16.04/
CUDA 9.0/
Eigen3/
Kinetic/
Autoware Version 1.11
The final results of the colcon build is.
Aborted  <<< lidar_euclidean_cluster_detect
Aborted  <<< costmap_generator
 
                                         
Summary: 121 packages finished [1min 18s]

    1 package failed: lidar_localizer
    7 packages aborted: costmap_generator lidar_euclidean_cluster_detect naive_motion_predict points_preprocessor road_occupancy_processor sick_ldmrs_laser trafficlight_recognizer
    3 packages had stderr output: lidar_euclidean_cluster_detect lidar_localizer trafficlight_recognizer
    10 packages not processed

One error occurred in the  code for ndt_mapping
[Processing: dp_planner, ff_waypoint_follower, lattice_planner, lidar_kf_contour_track, lidar_localizer, trafficlight_recognizer, way_planner, waypoint_maker]
--- stderr: lidar_localizer                                                    
    In file included from /usr/local/include/eigen3/Eigen/Eigenvalues:35:0,
                 from /usr/local/include/eigen3/Eigen/Dense:7,
                 from /home/joshua/autoware.ai/install/ndt_cpu/include/ndt_cpu/Registration.h:4,
                 from /home/joshua/autoware.ai/install/ndt_cpu/include/ndt_cpu/NormalDistributionsTransform.h:4,
                 from /home/joshua/autoware.ai/src/autoware/core_perception/lidar_localizer/nodes/ndt_matching/ndt_matching.cpp:56:
    /usr/local/include/eigen3/Eigen/src/misc/RealSvd2x2.h:19:6: error: redefinition of ‘template<class MatrixType, class RealScalar, class Index> void Eigen::internal::real_2x2_jacobi_svd(const MatrixType&, Index, Index, Eigen::JacobiRotation<RealScalar>*, Eigen::JacobiRotation<RealScalar>*)’
 void real_2x2_jacobi_svd(const MatrixType& matrix, Index p, Index q,
      ^
In file included from /usr/include/eigen3/Eigen/SVD:36:0,
                 from /usr/include/eigen3/Eigen/Geometry:15,
                 from /usr/include/pcl-1.7/pcl/point_cloud.h:47,
                 from /opt/ros/kinetic/include/pcl_ros/point_cloud.h:5,
                 from /opt/ros/kinetic/include/velodyne_pointcloud/rawdata.h:33,
                 from /home/joshua/autoware.ai/src/autoware/core_perception/lidar_localizer/nodes/ndt_matching/ndt_matching.cpp:41:
    /usr/include/eigen3/Eigen/src/SVD/JacobiSVD.h:405:6: note: ‘template<class MatrixType, class RealScalar, class Index> void Eigen::internal::real_2x2_jacobi_svd(const MatrixType&, Index, Index, Eigen::JacobiRotation<RealScalar>*, Eigen::JacobiRotation<RealScalar>*)’ previously declared here

 void real_2x2_jacobi_svd(const MatrixType& matrix, Index p, Index q,
      ^
In file included from /usr/local/include/eigen3/Eigen/Eigenvalues:35:0,
                 from /usr/local/include/eigen3/Eigen/Dense:7,
                 from /home/joshua/autoware.ai/install/ndt_cpu/include/ndt_cpu/Registration.h:4,
                 from /home/joshua/autoware.ai/install/ndt_cpu/include/ndt_cpu/NormalDistributionsTransform.h:4,
                 from /home/joshua/autoware.ai/src/autoware/core_perception/lidar_localizer/nodes/ndt_mapping/ndt_mapping.cpp:47:
/usr/local/include/eigen3/Eigen/src/misc/RealSvd2x2.h:19:6: error: redefinition of ‘template<class MatrixType, class RealScalar, class Index> void Eigen::internal::real_2x2_jacobi_svd(const MatrixType&, Index, Index, Eigen::JacobiRotation<RealScalar>*, Eigen::JacobiRotation<RealScalar>*)’
 void real_2x2_jacobi_svd(const MatrixType& matrix, Index p, Index q,
      ^
In file included from /usr/include/eigen3/Eigen/SVD:36:0,
                 from /usr/include/eigen3/Eigen/Geometry:15,
                 from /usr/include/pcl-1.7/pcl/point_cloud.h:47,
                 from /opt/ros/kinetic/include/pcl_ros/point_cloud.h:5,
                 from /opt/ros/kinetic/include/velodyne_pointcloud/rawdata.h:33,
                 from /home/joshua/autoware.ai/src/autoware/core_perception/lidar_localizer/nodes/ndt_mapping/ndt_mapping.cpp:37:
/usr/include/eigen3/Eigen/src/SVD/JacobiSVD.h:405:6: note: ‘template<class MatrixType, class RealScalar, class Index> void Eigen::internal::real_2x2_jacobi_svd(const MatrixType&, Index, Index, Eigen::JacobiRotation<RealScalar>*, Eigen::JacobiRotation<RealScalar>*)’ previously declared here
 void real_2x2_jacobi_svd(const MatrixType& matrix, Index p, Index q,
      ^
make[2]: *** [CMakeFiles/ndt_mapping.dir/nodes/ndt_mapping/ndt_mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/ndt_mapping.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/ndt_matching.dir/nodes/ndt_matching/ndt_matching.cpp.o] Error 1   
   make[1]: *** [CMakeFiles/ndt_matching.dir/all] Error 2
   make: *** [all] Error 2

I would like to know how to fix this. Please advise.

Originally posted by JoshuaSiy on ROS Answers with karma: 23 on 2019-07-22
Post score: 2

A:

It seems that Eigen::internal::real_2x2_jacobi_svd funtion is defined twice.
Please reinstall Eigen.
As shown in the following commit, it seems to move the function from JacobiSVD.h to RealSvd2x2.h.
https://bitbucket.org/eigen/eigen/commits/eb8d87ca2cfc24629a76942b445880a199a2d5e2

Originally posted by Yamato Ando with karma: 231 on 2019-07-23
This answer was ACCEPTED on the original site
Post score: 2

Original comments
Comment by JoshuaSiy on 2019-07-24:
Thank you.
Comment by mhxu on 2019-08-22:
Still having the problem after uninstall and reinstall Eigen. Should I switch to an older version of Eigen?
Comment by Yamato Ando on 2019-08-26:
@mhxu Are you exactly the same error? Are two Eigen installed?
Either uninstall one or set it so that it will not be referenced during build.
Comment by mhxu on 2019-08-26:
@Yamato Ando . Yes, I think the problem might be two Eigen were installed. I figured out that I don't have to manually install Eigen from source. Eigen has already been installed on my machine by command apt-get install libeigen3-dev.
Comment by Yamato Ando on 2019-08-27:
@mhxu Could you remove Eigen installed from source?
Like the command,
$ cd <Eigen-source-directory>/build
$ sudo make uninstall

Comment by mhxu on 2019-08-27:
@Yamato Ando . Problem resolved after removing the Eigen from source. Thank you.
Comment by Yamato Ando on 2019-08-27:
@mhxu Great !
Comment by Eleonore on 2020-06-23:
Hi, I have the same issue. However, i do not manage to uninstall eigen from source, there is no build folder. I tried sudo apt remove libeigen3-dev but then I have other issues. Could you be more specific on how you solved the problem. Thanks !

